fx(rebase): to be up to date with upstream
ft: add payment using Stripe API

fx(rebase): to be up to date with upstream

bg: won't treat an empty cart as an error & remove the required middleware to add

ft: #184361206 Setup docker for backend application

This changes setup the following services on local development:

1. express server
2. postgress db.

ft(product): add product view by ID [#184361222]

fix(utilsJWT): fix token expiry for password reset [#184361212]

fx:admin get orders #184361232

ft: add payment using Stripe API

fx(rebase): to be up to date with upstream

ft: #184361213 add Two Factor Authentication for Sellers

add all tests for this feature plus it's documentation

GIVEN there is a request to log in a user to the website
WHEN 2FA is enabled on the particular user
THEN Further request for a 2FA token should be requested and once the token is received and validated, the user is allowed to log in.

bg: won't treat an empty cart as an error & remove the required middleware to add

ft: #184361206 Setup docker for backend application

This changes setup the following services on local development:

1. express server
2. postgress db.

ft(product): add product view by ID [#184361222]

fx(rebase): to be up to date with upstream

ft: #184361206 Setup docker for backend application

This changes setup the following services on local development:

1. express server
2. postgress db.

ft(product): add product view by ID [#184361222]

fx(rebase): to be up to date with upstream

bg: won't treat an empty cart as an error & remove the required middleware to add

ft: #184361206 Setup docker for backend application

This changes setup the following services on local development:

1. express server
2. postgress db.

fx(rebase): to be up to date with upstream

Fix(Hound CI) fixing houndCI Error

ft:seller delete specific Item in collection

ft: #184361213 add Two Factor Authentication for Sellers

add all tests for this feature plus it's documentation

GIVEN there 

--- a/docs/product.docs.yaml
+++ b/docs/product.docs.yaml
@@ -103,6 +103,54 @@ paths:
         "5XX":
           description: Unexpected error.
 
+  # update a product
+  /api/v1/product/update/{productId}:
+    patch:
+      security: [{ jwt: [] }]
+      summary: Update a product
+      tags: [Product Routes]
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          description: The Id of product you want to update
+          schema:
+            type: string
+            minimum: 15
+      requestBody:
+        description: Please fill fields you want to update and remove un wanted
+        content:
+          application/json:
+            schema:
+              product:
+                type: object
+              properties:
+                name:
+                  type: string
+                  default: Meat
+                category:
+                  type: string
+                  default: Food
+                description:
+                  type: string
+                  default: Quality meat for your whole family
+                stock:
+                  type: string
+                  default: Available
+                price:
+                  type: number
+                  default: 3
+                images:
+                  type: string
+                  default:
+      responses:
+        '200':
+          description: Update done Successfully
+        '404':
+          description: This Product doesn't exists.
+        '401':
+          description: You are not allowed to access this route
+
 # schemas
 components:
   schemas:
