--- a/docs/order.docs.yaml
+++ b/docs/order.docs.yaml
@@ -12,7 +12,7 @@ paths:
           description: Bad request. Product ID must be an integer and larger than 0.
 
   #get all order
-  /api/v1/order/all:
+  /api/v1/order/get/all:
     get:
       security: [{ jwt: [] }]
       tags: [ORDERS]
@@ -21,8 +21,18 @@ paths:
         '200':
           description: OK
         '400':
-          description: Bad request. User ID must be an integer and larger than 0.
+          description: Bad request.
 
+  /api/v1/order/all:
+    get:
+      security: [{ jwt: [] }]
+      tags: [ORDERS]
+      summary: Admin get all orders
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad request.
 
   # get order starts
   /api/v1/order/status/{orderId}:
@@ -37,7 +47,6 @@ paths:
           description: The Id on order you.
           schema:
             type: string
-            format: int64
             minimum: 1
       responses:
         '200':
@@ -56,7 +65,6 @@ paths:
         description: The ID of the order to update.
         schema:
           type: string
-          format: int64
           minimum: 1
       - name: status
         in: body
@@ -75,7 +83,7 @@ paths:
 
 
   #delete all order
-/api/v1/order/alll:
+/api/v1/order/delete/all:
   delete:
     security: [{ jwt: [] }]
     tags: [ORDERS]
