--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "cross-env NODE_ENV=development npx nodemon",
     "build": "node_modules/.bin/rimraf ./build && npx tsc",
     "test": "cross-env NODE_ENV=test && yarn migration && yarn seed:test && yarn jest --coverage --detectOpenHandles",
+    "test:dev": "cross-env NODE_ENV=development & yarn migrate:dev && yarn seed:dev && NODE_ENV=development yarn jest --coverage --detectOpenHandles",
     "test:watch": "yarn test -- --watch",
     "coverage": "jest --coverage --detectOpenHandles --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
@@ -48,6 +49,7 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "node-2fa": "^2.0.3",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "openapi-types": "^12.1.0",
     "passport": "^0.6.0",
@@ -68,6 +70,7 @@
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
+    "@types/node-cron": "^3.0.7",
     "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth2": "^0.1.5",
