--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pg-hstore": "^2.3.4",
     "rimraf": "^4.1.2",
     "sequelize": "^6.28.0",
+    "socket.io": "^4.6.1",
     "stripe": "^11.12.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0"
