add chatting feature for users #184361239

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ EMAIL_PORT=
 # google credentials
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+#for charting
+VITE_API_URL=http://localhost:8081/api/v1
+VITE_BACKEND_URL=http://localhost:8081
