--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/socket.io": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.5",
