--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-auth-library": "^8.7.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "node-2fa": "^2.0.3",
