ft: admin set roles
fx: fix github actions tests failing reporting and coveralls

we well getting green check mark indicating that tests are passing, though they were failing,
this fix will stop coveralls reporting and will give red failing cross on github actions if tests are fails.

Fixes #123

add chatting feature for users #184361239

add peer to peer chatting
remove broadcasting message to all users

fx: redirect user to the deployed frontend login page #121

after successfully being registeresd , when user click the verification link in the email it should redirect to the deployed frontend login page

Fixes #121

fx: add google login middleware

This app had no way to logging using google, the client needed this feature which will return the response to client.

ft: admin set roles

fx: redirect user to the deployed frontend login page #121

after successfully being registeresd , when user click the verification link in the email it should redirect to the deployed frontend login page

Fixes #121

fx: add google login middleware

This app had no way to logging using google, the client needed this feature which will return the response to client.

ft: admin set roles and permissions

fx: add google login middleware

This app had no way to logging using google, the client needed this feature which will return the response to client.

ft: admin set roles and permissions

Revert "add ft: admin should be able to disable any user account #184361215"

add chatting feature for users #184361239

ft-buyer-provide-review#184361226

fx: fix github actions tests failing reporting and coveralls

we well getting green check mark indicating that tests are passing, though they were failing,
this fix will stop coveralls reporting and will give red failing cross on github actions if tests are fails.

Fixes #123

 ft: admin set roles and permissions

ft-buyer-provide-review#184361226

fx: fix github actions tests failing reporting and coveralls

we well getting green check mark in

--- a/docs/wishes.docs.yaml
+++ b/docs/wishes.docs.yaml
@@ -15,19 +15,19 @@ paths:
             format: int64
             minimum: 1
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Wishes'
-        '400':
+                $ref: "#/components/schemas/Wishes"
+        "400":
           description: Bad request.
-        '401':
+        "401":
           description: Authorized.
-        '404':
+        "404":
           description: A user with the specified ID was not found.
-        '5XX':
+        "5XX":
           description: Unexpected error.
   #get all wishes
   /api/v1/wishes/:
@@ -37,15 +37,15 @@ paths:
       summary: get all your wishes in wishlist
       description: Optional extended description in CommonMark or HTML.
       responses:
-        '200':
+        "200":
           description: OK
-        '400':
+        "400":
           description: Bad request. User ID must be an integer and larger than 0.
-        '401':
+        "401":
           description: Authorization information is missing or invalid.
-        '404':
+        "404":
           description: A user with the specified ID was not found.
-        '5XX':
+        "5XX":
           description: Unexpected error.
 
   # delete one wishes
@@ -64,19 +64,19 @@ paths:
             format: int64
             minimum: 1
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Wishes'
-        '400':
+                $ref: "#/components/schemas/Wishes"
+        "400":
           description: Bad request. Product ID must be an integer and larger than 0.
-        '401':
+        "401":
           description: Authorization information is missing or invalid.
-        '404':
+        "404":
           description: A user with the specified ID was not found.
-        '5XX':
+        "5XX":
           description: Unexpected error.
 
   #get all wishes
@@ -87,15 +87,15 @@ paths:
       summary: delete all your wishes in wishlist
       description: Optional extended description in CommonMark or HTML.
       responses:
-        '200':
+        "200":
           description: OK
-        '400':
+        "400":
           description: Bad request. User ID must be an integer and larger than 0.
-        '401':
+        "401":
           description: Authorization information is missing or invalid.
-        '404':
+        "404":
           description: A user with the specified ID was not found.
-        '5XX':
+        "5XX":
           description: Unexpected error.
 
 # schemas
