--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,8 @@
   "trailingComma": "all",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
