--- a/package.json
+++ b/package.json
@@ -87,11 +87,12 @@
     "coveralls": "^3.1.1",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^29.4.2",
     "lint-staged": "^13.1.1",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.8",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
